--- a/.github/workflows/main-on-merge.yaml
+++ b/.github/workflows/main-on-merge.yaml
@@ -31,6 +31,11 @@ jobs:
       max-parallel: 1
     runs-on: ubuntu-latest
 
+    outputs:
+      major: ${{ steps.version.outputs.major }}
+      minor: ${{ steps.version.outputs.minor }}
+      patch: ${{ steps.version.outputs.patch }}
+
     steps: 
     - uses: actions/checkout@v2
       with:
@@ -72,6 +77,7 @@ jobs:
     strategy: 
       max-parallel: 1
     runs-on: ubuntu-latest
+    needs: create-release-tag
 
     steps: 
     - uses: actions/checkout@v2
@@ -88,4 +94,5 @@ jobs:
         git commit -m "upmerge after $RELEASE";
         git push;
       env:
-        RELEASE: v${{ steps.version.outputs.major }}.${{ steps.version.outputs.minor }}.${{ steps.version.outputs.patch }}
+        RELEASE: v${{ needs.create-release-tag.outputs.major }}.${{ needs.create-release-tag.outputs.minor }}.${{ needs.create-release-tag.outputs.patch }} 
+
